syntax = "proto3";
package payment;
option go_package = "event_sourcing_payment/proto/payment;payment";

import "payment/transaction.proto";

message ErrorResponse {
	string root_error = 1;
	string message = 2;
	int64 http_code = 3;
	int64 grpc_code = 4;
}

service PaymentService {
	rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse);
}